[package]
name = "base"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
